web/app/themes/tennis-majors-v2/resources/styles/single.scss
.article-container,
.single-videos {
    .content {
        h2, h3, h4, h5, h6, p, ul, ol, .read-also {
            @apply mb-8 px-4;
        }

        h2 {
            @apply font-bold uppercase text-2xl mt-10;

            &.h2--two-level {
                padding-bottom: 0 !important;
            }
        }
        

        p {
            @apply px-4 text-xl;

            &.h2--sub-title {
                @apply text-2xl;
            }
        }

        .image-player {
            @apply absolute block object-cover w-full h-full pt-0 pb-0;
        }

        ul {
            @apply list-disc text-xl pl-20;
        }

        ol {
            @apply list-decimal text-xl pl-20;
        }

        p {
            a {
                @apply underline text-gray-700 hover:text-black;
            }
        }

        .instagram-media, .twitter-tweet {
            margin: 2rem auto !important;
            width: 100% !important;
        }

        .video-container {
            @apply  relative h-0 pb-16/9 mb-6;

            .video {
                @apply absolute w-full h-full;
            }
        }

        blockquote.wp-block-quote {
            @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
        
            &::before {
                @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
                content: "";
                background-image: url(../images/quote.png);
            }
        
            p, ul{
                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-3xl px-0;
            }
        
            cite {
                @apply not-italic;
            }
        }
    }
}

.feature {
    .content {
        @apply mt-12;

        h1, h2, h3, h4, h5, h6, p, ul, ol, .read-also {
            @apply m-auto pb-4 max-w-screen-sm;
        }

        h2 {
            @apply mt-3;

            &.h2--two-level {
                padding-bottom: 0 !important;
            }
        }

        p {
            &.h2--sub-title {
                @apply text-2xl;
            }
        }

        img  {
            @apply m-auto pt-4 pb-8 md:pt-12 md:pb-14;

            &.image-player {
                @apply absolute block object-cover w-full h-full pt-0 pb-0;
            }
        }

        .read-also {
            img  {
                @apply mt-0 mb-0 md:mt-0 md:mb-0;
            } 
        }

        blockquote.wp-block-quote {
            @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
        
            &::before {
                @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
                content: "";
                background-image: url(../images/quote.png);
            }
        
            p, ul{
                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-3xl px-0;
            }
        
            cite {
                @apply not-italic;
            }
        }

        .wp-block-cover {
            @apply relative my-12;

            &::before {
                @apply absolute w-full h-full top-0 left-0 bg-black opacity-50;
                content: "";
            }
        
            &__image-background {
                @apply m-0 p-0 w-full;
            }

            &__inner-container {
                p {
                    @apply absolute top-1/2 left-1/2 text-6xl font-bold uppercase w-full max-w-screen-lg text-white transform -translate-x-1/2 -translate-y-1/2 text-center;
                }
            }
        }

        .wp-block-image {
            @apply relative max-w-screen-sm m-auto pt-8 pb-12;
        
            img {
                @apply w-full p-0;
            }

            &.alignwide {
                @apply max-w-screen-xl m-auto;
            }

            &.alignfull {
                @apply max-w-full m-auto;
            }

            figcaption {
                @apply absolute bottom-16 right-4 bg-black text-white px-2 pb-1;
            }
        }

        .wp-block-gallery {
            @apply relative max-w-screen-xl m-auto;

            .blocks-gallery-grid {
                @apply list-none max-w-full grid grid-cols-3 gap-4;
            }

            .blocks-gallery-item {
                figure {
                    @apply relative;

                    img {
                        @apply p-0;
                    }

                    figcaption {
                        @apply absolute bottom-3 right-3 bg-black text-white px-2 pb-1;
                    }
                }
            }
        
            img {
                @apply w-full;
            }

            &.alignwide {
                @apply max-w-screen-xl m-auto;
            }

            &.alignfull {
                @apply max-w-full m-auto;
            }
        }
    }
}

.video {
    &-header {
        @apply relative;

        &::before {
            content: '';
            @apply absolute top-0 w-full bg-black -z-1;
            height: calc(100% - 4rem);
        }

        &::after {
            content: '';
            @apply absolute w-full bottom-0 bg-gray-200 -z-1;
            height: 4rem;
        }
    }

    .content {
        @apply mt-12;

        h1, h2, h3, h4, h5, h6, p, ul, ol {
            @apply m-auto pb-4 max-w-screen-sm;
        }

        h2 {
            @apply mt-3;

            &.h2--two-level {
                padding-bottom: 0 !important;
            }
        }

        p {
            &.h2--sub-title {
                @apply text-2xl;
            }
        }

        img  {
            @apply m-auto pt-4 pb-8 md:pt-12 md:pb-14;

            &.image-player {
                @apply absolute block object-cover w-full h-full pt-0 pb-0;
            }
        }

        ul {
            @apply list-disc text-xl pl-20;
        }

        ol {
            @apply list-decimal text-xl pl-20;
        }

        blockquote.wp-block-quote {
            @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
        
            &::before {
                @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
                content: "";
                background-image: url(../images/quote.png);
            }
        
            p, ul{
                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-3xl px-0;
            }
        
            cite {
                @apply not-italic;
            }
        }
    }
}

.videos .content .inherited-shortcode-video,
.videos .content .inherited-shortcode-iframe {
    display: none;
}

